@@ -76,6 +76,7 @@ The `wagtail start` command now supports an optional `--template` argument that 
  * Avoid `ValueError` when extending `PagesAPIViewSet` and setting `meta_fields` to an empty list (Henry Harutyunyan, Alex Morega)
  * Improve accessibility for header search, remove autofocus on page load, advise screen readers that content has changed when results update (LB (Ben) Johnston)
  * Fix incorrect override of `PagePermissionHelper.user_can_unpublish_obj()` in ModelAdmin (Sébastien Corbin)
+ * Prevent memory exhaustion when updating a large number of image renditions (Jake Howard)
 
 ### Documentation
 
