@@ -1,6 +1,11 @@
+import logging
+
 from django.core.management.base import BaseCommand
+from django.db import transaction
 
 from wagtail.images import get_image_model
+
+logger = logging.getLogger(__name__)
 
 
 class Command(BaseCommand):
@@ -14,43 +19,66 @@ class Command(BaseCommand):
             action="store_true",
             help="Purge all image renditions without regenerating them",
         )
+        parser.add_argument(
+            "--chunk-size",
+            type=int,
+            default=50,
+            help="Operate in x size chunks (default: %(default)s)",
+        )
 
     def handle(self, *args, **options):
-        renditions = get_image_model().get_rendition_model().objects.all()
-        if len(renditions) == 0:
-            self.stdout.write("No image renditions found.")
+        Rendition = get_image_model().get_rendition_model()
+
+        renditions = Rendition.objects.all()
+
+        purge_only = options["purge_only"]
+
+        if not renditions.exists():
+            self.stdout.write(self.style.WARNING("No image renditions found."))
             return
 
-        success_count = 0
-        if options["purge_only"]:
-            for rendition in renditions:
-                try:
+        rendition_ids = list(renditions.values_list("id", flat=True))
+        num_renditions = len(rendition_ids)
+
+        if purge_only:
+            self.stdout.write(
+                self.style.HTTP_INFO(f"Purging {num_renditions} rendition(s)")
+            )
+        else:
+            self.stdout.write(
+                self.style.HTTP_INFO(f"Regenerating {num_renditions} rendition(s)")
+            )
+
+        for rendition in (
+            # Pre-calculate the ids of the renditions to change,
+            # otherwise `.iterator` never ends.
+            renditions.filter(id__in=rendition_ids)
+            .select_related("image")
+            .iterator(chunk_size=options["chunk_size"])
+        ):
+            try:
+                with transaction.atomic():
+                    rendition_filter = rendition.filter
                     rendition_image = rendition.image
+
+                    # Delete the existing rendition
                     rendition.delete()
-                    success_count = success_count + 1
-                except Exception:  # noqa: BLE001
-                    self.stderr.write(
-                        f"Could not purge rendition for {rendition_image.title}"
-                    )
+
+                    if not purge_only:
+                        # Create a new one
+                        rendition_image.get_rendition(rendition_filter)
+            except:  # noqa:E722
+                logger.exception("Error operating on rendition %d", rendition.id)
+                self.stderr.write(
+                    self.style.ERROR(f"Failed to operate on rendition {rendition.id}")
+                )
+                num_renditions -= 1
+
+        if num_renditions:
             self.stdout.write(
                 self.style.SUCCESS(
-                    f"Successfully purged {success_count} image rendition(s)"
+                    f"Successfully processed {num_renditions} rendition(s)"
                 )
             )
         else:
-            for rendition in renditions:
-                try:
-                    rendition_filter = rendition.filter
-                    rendition_image = rendition.image
-                    rendition.delete()
-                    rendition_image.get_rendition(rendition_filter)
-                    success_count = success_count + 1
-                except Exception:  # noqa: BLE001
-                    self.stderr.write(
-                        f"Could not regenerate rendition for {rendition_image.title}"
-                    )
-            self.stdout.write(
-                self.style.SUCCESS(
-                    f"Successfully regenerated {success_count} image rendition(s)"
-                )
-            )
+            self.stdout.write(self.style.WARNING("Could not process any renditions."))
